--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,4 @@
+<script src="http://localhost:8097"></script>
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -19,7 +20,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Registration</title>
   </head>
   <body>
     <noscript>
